<resources>
    <string name="app_name" translatable="false">Foodey Partner App</string>
    <string name="phone_num" translatable="false">Mobile Number</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email id</string>

    <!--- Restaurant Owner-->
    <string name="ownerName">Raghav Singh</string>
    <string name="designation">Restaurant Owner</string>
    <string name="daily">Daily Earnings and Orders</string>
    <string name="orders">No.Of Orders</string>
    <string name="restaurant">Restaurant</string>
    <string name="menuAdd">Add Menu</string>
    <string name="menuList">Menu List</string>
    <string name="logout">Logout</string>
    <string name="order">Order Delivered</string>

    <string name="something_wrong">SomeThing Went Wrong</string>

    <string name="title_permission">Location Permission</string>
    <string name="title_read_permission">Read SMS</string>
    <string name="ok">ok</string>

    <!--Add Menu-->
    <string name="AddName">Item Name</string>
    <string name="AddCategory">Category</string>
    <string name="AddEmail">Email</string>
    <string name="AddMobile">Mobile Number</string>
    <string name="AddLatitude">Latitude</string>
    <string name="AddLongitude">Longitude</string>
    <string name="AddAddress">Address</string>
    <string name="AddLocation">Location</string>
    <string name="AddTiming">Timing</string>
    <string name="AddAbout">About</string>
    <string name="AddFacilities">Facilities and Features Available</string>
    <string name="AddImage">Upload Image</string>
    <string name="AddSubmit">Submit</string>

    <!--popup-->
    <string name="add_phote">Add Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel_text">Cancel</string>

    <string name="AddNameGrocery">Grocery Item Name</string>
    <string name="In">In</string>

    <string name="store">Store</string>

    <!--View Special Cake-->
    <string name="viewCake">Cake Type</string>
    <string name="cakeName">Cake Name</string>
    <string name="qtyType">Quantity Type</string>
    <string name="qtySize">Quantity Size</string>
    <string name="content"></string>
    <string name="no_internet">no internet connection</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
