<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.GroceryProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_ownerImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:src="@drawable/man_" />

                <TextView
                    android:id="@+id/tv_ownerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:text="@string/ownerName"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_ownerDesignation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:text="@string/designation"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/dEarn"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="200dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/iv_money"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/salary_" />

                            <TextView
                                android:id="@+id/tv_daily"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/iv_money"
                                android:layout_marginTop="8dp"
                                android:text="@string/daily"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="0.5"
                    android:visibility="gone">

                    <android.support.v7.widget.CardView
                        android:id="@+id/nOrders"
                        android:layout_width="200dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="200dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_order"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/order" />

                            <TextView
                                android:id="@+id/tv_order"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/iv_order"
                                android:layout_marginTop="8dp"
                                android:text="@string/orders"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/linearLayout2">

                <LinearLayout
                    android:id="@+id/linear_addMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/iv_addMenu"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_addmenu" />

                        <TextView
                            android:id="@+id/tv_addMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:padding="6dp"
                            android:text="@string/menuAdd"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">



                        <ImageView
                            android:id="@+id/iv_restaurant"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="0.2"
                            android:padding="10dp"
                            android:src="@drawable/restaurant" />

                        <TextView
                            android:id="@+id/tv_restaurant"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:layout_gravity="center_vertical"
                            android:padding="6dp"
                            android:text="@string/store"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    <TextView
                        android:id="@+id/openClosed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="Open"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_notification"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:src="@drawable/bell" />

                    <TextView
                        android:id="@+id/tv_notificationList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:padding="6dp"
                        android:text="Notifications"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout5"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">



                        <ImageView
                            android:id="@+id/iv_Logout"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_logout" />

                        <TextView
                            android:id="@+id/tv_Logout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:padding="6dp"
                            android:text="@string/logout"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>