<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_back"
    tools:context=".restaurant.activities.LoginActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/white_overlay"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_rest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="Foodey.Restaurants"
                android:textColor="@color/header_bg"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/email"
                    android:contentDescription="@string/app_name" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin10"
                    android:layout_marginRight="@dimen/layout_margin10"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/vE_al_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_20"
                        android:theme="@style/EditTextTheme" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/password"
                    android:contentDescription="@string/app_name" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin10"
                    android:layout_marginRight="@dimen/layout_margin10"
                    android:gravity="center"
                    android:textColorHint="@color/hint_color"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/vE_al_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_20"
                        android:theme="@style/EditTextTheme" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/red_all_corner_bend"
                android:onClick="doLogin"
                android:text="Sign In"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>